Update project references and enhance logging
- Updated maintainer and repository references from "varbhat" to "zakaria-didah" across Dockerfile, go.mod, and documentation.
- Added new entries to .gitignore for exatorrent and exadir.
- Refactored logging to use structured logging with `log/slog` for better log management in core functionalities.
- Enhanced HTTP handlers with CORS middleware and rate limiting for improved API security.
- Introduced new API endpoints for handling signup requests and torrent categories.
- Improved UI elements in web components for better user experience and consistency in styling.

--- a/internal/web/package.json
+++ b/internal/web/package.json
@@ -1,16 +1,16 @@
 {
   "name": "exatorrent",
   "private": true,
-  "homepage": "https://github.com/varbhat/exatorrent#readme",
+  "homepage": "https://github.com/zakaria-didah/exatorrent#readme",
   "bugs": {
-    "url": "https://github.com/varbhat/exatorrent/issues"
+    "url": "https://github.com/zakaria-didah/exatorrent/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/varbhat/exatorrent.git"
+    "url": "git+https://github.com/zakaria-didah/exatorrent.git"
   },
   "license": "GPL-3.0-or-later",
-  "author": "varbhat",
+  "author": "zakaria-didah",
   "type": "module",
   "scripts": {
     "build": "vite build",
